--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="col-3 post--venta--container">
                     <div class="correo--container">
                         <i class="bi bi-envelope-fill text--footer icon-footer"></i>
-                        <p class="text--footer"> postventa@retailexpress.pe</p>
+                        <p class="text--footer"> alumnos@markahm.edu.pe</p>
                     </div>
                     <div class="telef--container">
                         <i class="bi bi-telephone-fill text--footer icon-footer"></i>
@@ -203,7 +203,7 @@
         </section>
  
         <section class="container">
-            <p class="text-center tittle--footer"> © 2024 Retail Express. Todos los derechos reservados – Política de Privacidad – Política de Tratamiento de Datos </p>
+            <p class="text-center tittle--footer"> © 2024 Markahm. Todos los derechos reservados – Política de Privacidad – Política de Tratamiento de Datos </p>
         </section>
     </footer>
 
