--- a/gestionLista.html
+++ b/gestionLista.html
@@ -96,8 +96,8 @@
 
       </form>
 
-      <div class="table--container container">
-        <table class="table text-center movie--list  table-borderless table-striped main--table">
+      <div class="table--container  container">
+        <table class="table text-center movie--list table-striped main--table">
           <thead>
             <tr>
               <th scope="col">Id</th>
@@ -167,7 +167,7 @@
         <div class="col-3 post--venta--container">
           <div class="correo--container">
             <i class="bi bi-envelope-fill text--footer icon-footer"></i>
-            <p class="text--footer"> postventa@retailexpress.pe</p>
+            <p class="text--footer"> alumnos@markahm.edu.pe</p>
           </div>
           <div class="telef--container">
             <i class="bi bi-telephone-fill text--footer icon-footer"></i>
@@ -220,7 +220,7 @@
     </section>
 
     <section class="container">
-      <p class="text-center tittle--footer"> © 2024 Retail Express. Todos los derechos reservados – Política de
+      <p class="text-center tittle--footer"> © 2024 Markahm. Todos los derechos reservados – Política de
         Privacidad – Política de Tratamiento de Datos </p>
     </section>
   </footer>
