--- a/agregarAlumno.html
+++ b/agregarAlumno.html
@@ -46,8 +46,7 @@
 
     <main>
         <section class="movies--list--section container pt-5 pb-5">
-            <h1 class="movies--list--section__title text-center fs-3 text-uppercase pt-3 main-title">Listas de Alumnos
-                del Markham</h1>
+            <h1 class="movies--list--section__title text-center fs-3 text-uppercase pt-3 main-title">Lista de alumnos por Grado</h1>
 
             <div class="container mt-4">
                 <form id="agregarAlumnoForm">
@@ -81,7 +80,10 @@
                             </select>
                         </div>
                         <div class="col-sm-2">
-                            <button type="button" class="btn main--button" id="agregarAlumnoBtn">Agregar</button>
+                            <button type="button" class="btn main--button" id="agregarAlumnoBtn">
+                                <i class="bi bi-folder-plus icon-button"></i>
+                                Agregar
+                            </button>
                         </div>
                     </div>
                 </form>
@@ -93,12 +95,12 @@
                 <table class="table text-center movie--list  table-bordered table-striped main--table">
                     <thead>
                         <tr>
-                            <th scope="col">Codigo de Alumno</th>
-                            <th scope="col">Apellido Paterno</th>
-                            <th scope="col">Apellido Materno</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">DNI</th>
-                            <th scope="col">Acciones</th>
+                            <th class="cabecera" scope="col">Codigo de Alumno</th>
+                            <th class="cabecera" scope="col">Apellido Paterno</th>
+                            <th class="cabecera" scope="col">Apellido Materno</th>
+                            <th class="cabecera" scope="col">Nombre</th>
+                            <th class="cabecera" scope="col">DNI</th>
+                            <th class="cabecera" scope="col">Eliminar Alumno</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -109,7 +111,9 @@
                             <td scope="col">Markin Piero</td>
                             <td scope="col">74893846</td>
                             <td>
-                                <a href=""><i class="movie--list__edit-icon main-icons">Eliminar</i></a>
+                                <a href="">
+                                    <i class="bi bi-trash3-fill main-icons"></i>
+                                 </a>
                             </td>
                         </tr>
                         <tr>
@@ -119,7 +123,9 @@
                             <td scope="col">Enzo Jordy</td>
                             <td scope="col">12345678</td>
                             <td>
-                                <a href=""><i class="movie--list__edit-icon main-icons">Eliminar</i></a>
+                                <a href="">
+                                    <i class="bi bi-trash3-fill main-icons"></i>
+                                 </a>                            
                             </td>
                         </tr>
                     </tbody>
@@ -129,8 +135,7 @@
             <div class="row justify-content-center">
                 <button type="submit"
                     class="col-2 btn btn-secondary mb-3 movies--list--section__button main--button button-shadow">
-
-                    <i class="bi bi-person-fill-add icon-button"></i>
+                    <i class="bi bi-arrow-return-left icon-button"></i>
                     <!-- <a href="nuevoCliente.html"> -->
                     Volver
                     <!-- </a> -->
