Se agregó control select para los años 2025 y 2026 en pantalla gestionLista.html

--- a/gestionLista.html
+++ b/gestionLista.html
@@ -84,7 +84,11 @@
             <label for="inputPassword6" class="col-form-label">AÑO:</label>
           </div>
           <div class="col-auto">
-            <input type="text" id="inputPassword6" class="form-control" aria-describedby="passwordHelpInline">
+            <select id="anio" class="form-select">
+              <option value="2024">--Seleccionar Año--</option>
+              <option value="2024">2025</option>
+              <option value="2024">2026</option>
+            </select>          
           </div>
         </div>
 
