Mejora de los controles select de nuevoGrado.html

--- a/nuevoGrado.html
+++ b/nuevoGrado.html
@@ -84,19 +84,23 @@
           <div class="mb-3">
             <label for="anio" class="form-label">Año</label>
             <select id="anio" class="form-select">
-              <option value="2024">2025</option>
-              <option value="2024">2026</option>
+              <option value="default">-- Seleccionar año académico --</option>
+              <option value="2025">2025</option>
+              <option value="2026">2026</option>
             </select>
           </div>
           <!-- Grado -->
           <div class="mb-3">
             <label for="grado" class="form-label">Grado</label>
             <select id="grado" class="form-select">
-              <option value="1ero">1</option>
-              <option value="2do">2</option>
-              <option value="3ero">3</option>
-              <option value="4to">4</option>
-              <option value="5to">5</option>
+              <option value="default">-- Seleccionar grado --</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+
               <!-- <option value="6to">6to</option> -->
             </select>
           </div>
@@ -104,6 +108,8 @@
           <div class="mb-3">
             <label for="nivel" class="form-label">Nivel</label>
             <select id="nivel" class="form-select">
+              <option value="default">-- Seleccionar nivel --</option>
+              <option value="primaria">Primaria</option>
               <option value="secundaria">Secundaria</option>
             </select>
           </div>
