--- a/gestionLista.html
+++ b/gestionLista.html
@@ -85,9 +85,9 @@
           </div>
           <div class="col-auto">
             <select id="anio" class="form-select">
-              <option value="2024">--Seleccionar Año--</option>
-              <option value="2024">2025</option>
-              <option value="2024">2026</option>
+              <option value="default">--Seleccionar Año--</option>
+              <option value="2025">2025</option>
+              <option value="2026">2026</option>
             </select>          
           </div>
         </div>
